# Scheat2

./: CMakeLists.txt  README.md  SPEC.txt
include/: CommandLineOptions.hpp  Context.h  FoundationGenerator.h  Generator.h  Lexer.h  Lexer.hpp  Parser.h  ScheatObjects.h  ScheatStd.h  ScheatStd.hpp  ScheatToken.h  Utilities.h  scheat.h
include/Context/: Variable.h
include/Nodes/: AccessTerm.h  AllNodes.h  AssignStatement.h  BoolTerm.h  CallTerm.h  Expr.h  ExprStatement.h  ExternalFunctionStatement.h  FloatTerm.h  FunctionDeclareStatement.h  GlobalIdentifierExpr.h  IdentifierTerm.h  InfixOperatorExpr.h  InfixOperatorTerm.h  IntTerm.h  LoadExpr.h  NewIdentifierExpr.h  Node.h  PostfixOperatorExpr.h  PostfixOperatorTerm.h  PrefixOperatorExpr.h  PrefixOperatorTerm.h  PrimaryExpr.h  PrimaryInfixOperatorExpr.h  PrimaryPostfixOperatorExpr.h  PrimaryPrefixOperatorExpr.h  Statement.h  StringTerm.h  Term.h
product/: CMakeLists.txt  CommandLineOptions.cpp  main.cpp
src/: CMakeLists.txt  Context.cpp  Generator.cpp  InfixOperatorExpr.cpp  InfixOperatorTerm.cpp  Lexer.cpp  Node.cpp  Parser.cpp  PrimaryInfixOperatorExpr.cpp  ScheatStd.cpp  StringTerm.cpp  Tokens.cpp  Utilities.cpp  scheat.cpp
src/Context/: Variable.cpp
src/Parser/: ParseExpr.cpp  ParseExternalFunctionStatement.cpp  ParseGlobalIdentifierExpr.cpp  ParseIdentifierTerm.cpp  ParseNewIdentifierExpr.cpp  ParsePrimaryExpr.cpp  ParseStatement.cpp  ParseTypeExpr.cpp
